# Gen-Searcher

./: README.md
Gen-DeepResearch-RL/: LICENSE  README.md
Gen-DeepResearch-RL/mbridge/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py
Gen-DeepResearch-RL/mbridge/.github/workflows/: publish-to-pypi.yml  run-tests.yml
Gen-DeepResearch-RL/mbridge/example/: 0.load_model_and_generate_single_gpu.py  1.load_model_and_export_single_gpu.py  2.load_model_and_export_multiple_gpus.py  3.launch_megatron_with_ray.py  4.launch_deepseekv3_with_ray.py
Gen-DeepResearch-RL/mbridge/example/gemma3/: load_model_and_forward.py  load_model_and_inference.py  run_test.sh
Gen-DeepResearch-RL/mbridge/example/glm4v/: README.md  _test_mrope_hf_vs_megatron.py  load_model_and_export.py  load_model_and_forward.py  load_model_and_inference.py
Gen-DeepResearch-RL/mbridge/example/internvl3/: conversation.py  data_proc.py  load_model_and_forward.py  load_model_and_inference.py  run_test.sh
Gen-DeepResearch-RL/mbridge/example/qwen3vl/: hf_fwd.py  hf_fwd_moe.py  load_model_and_forward.py  load_model_and_inference.py  mpirun.sh  run_test.sh  test_mrope.py  test_split.py
Gen-DeepResearch-RL/mbridge/mbridge/: __init__.py
Gen-DeepResearch-RL/mbridge/mbridge/core/: __init__.py  auto_bridge.py  bridge.py  llm_bridge.py  safetensor_io.py  util.py  vlm_bridge.py
Gen-DeepResearch-RL/mbridge/memory_estimator/: README.md  app.py  estimate.py  estimate_013.py  run_webui.sh
Gen-DeepResearch-RL/mbridge/tests/: test_deepseekv3_dequant_io.py  test_simple.py
(+247 files in other folders)
