[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mbridge"
version = "0.15.1"
authors = [
    { name = "Yan Bai", email = "bayan@nvidia.com" },
]
description = "Bridge Megatron-Core to Hugging Face/Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
license-files = ["LICENSE"]


[project.urls]
"Homepage" = "https://github.com/ISEEKYAN/mbridge"
"Bug Tracker" = "https://github.com/ISEEKYAN/mbridge/issues"

[project.optional-dependencies]
megatron = [
    "megatron-core>=0.12.0",
    "transformers",
    "safetensors",
    "einops",
]
test = [
    "pytest"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mbridge*"]
exclude = ["tests*"]
